@@ -297,7 +297,6 @@ int ExultStudio::save_obj_window
 	)
 	{
 	cout << "In save_obj_window()" << endl;
-	unsigned char data[Exult_server::maxlength];
 					// Get object address.
 	unsigned long addr = (unsigned long) gtk_object_get_user_data(
 							GTK_OBJECT(objwin));
